--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,14 +32,9 @@ dependencies:
   device_preview: ^1.2.0
   flutter:
     sdk: flutter
+  flutter_svg: ^2.0.14
 
 dev_dependencies:
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^4.0.0
   flutter_test:
     sdk: flutter
@@ -47,7 +42,7 @@ dev_dependencies:
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 # The following section is specific to Flutter packages.
-flutter:
+flutter: null
 flutter_assets:
   assets_path:
     - assets/images/
@@ -78,6 +73,5 @@ flutter_assets:
         - asset: assets/fonts/Montserrat-Regular.ttf
         - asset: assets/fonts/Montserrat-Medium.ttf
           weight: 500
-  #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
